test/errors/stringNotClosed.monga

char[] string = "Abeterrrabanakdad akdnlKFNLwfkanefame  ,asnlkaNDLsjfnlsJFN KADNLkndlNDLknm,xN <nndlKM ,N DLNASD AD
ANFLJANFNAFJNAFNALFN ;
int main void